--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,8 @@ package-mode = false
 python = "^3.11"
 fastapi = ">=0.115.12,<0.116.0"
 uvicorn = {extras = ["standard"], version = "^0.34.2"}
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
+alembic = "^1.15.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
