--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ fastapi = ">=0.115.12,<0.116.0"
 uvicorn = {extras = ["standard"], version = "^0.34.2"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 alembic = "^1.15.2"
+pydantic-settings = "^2.9.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
