--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ uvicorn = {extras = ["standard"], version = "^0.34.2"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 alembic = "^1.15.2"
 pydantic-settings = "^2.9.1"
+asyncpg = "^0.30.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
