feat: add aiohttp dependency

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 alembic = "^1.15.2"
 pydantic-settings = "^2.9.1"
 asyncpg = "^0.30.0"
+aiohttp = "^3.11.18"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
