--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,10 @@ alembic = "^1.15.2"
 pydantic-settings = "^2.9.1"
 asyncpg = "^0.30.0"
 aiohttp = "^3.11.18"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
+httpx = "^0.28.1"
+aiosqlite = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
